--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- 自分で書くスクリプト -->
     <script type="text/babel" src='tweet.jsx' defer></script>
+    <script type="text/babel" src='timeline.jsx' defer></script>
     <script type="text/babel" src="main.jsx" defer></script>
   </head>
 
