--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- 自分で書くスクリプト -->
     <script type="text/babel" src='tweet.jsx' defer></script>
     <script type="text/babel" src='timeline.jsx' defer></script>
+    <script type="text/babel" src='tweet_input.jsx' defer></script>
     <script type="text/babel" src="main.jsx" defer></script>
   </head>
 
